<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom"
        android:visible="true"/>

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        android:visible="true"/>

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        android:visible="true"/>

    <item
        android:id="@+id/userEditActivity"
        android:title="@string/user"
        app:showAsAction="never" />

    <item
        android:id="@+id/contacts"
        android:title="@string/contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/chartsMenuButton"
        android:title="Kimutatások"
        app:showAsAction="never" />

    <item
        android:id="@+id/logOutMenu"
        android:title="@string/logOut"
        app:showAsAction="never"/>
</menu>