<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/teal_200"
    android:orientation="vertical"
    android:padding="16dp">

    <!--A felhasználó valódi neve:-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/realName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--A felhasználó felhasználó neve:-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:backgroundTint="@color/teal_700"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--A felhasználó email címe:-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userMail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--A felhasználó email címe újra:-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userMailConfirm"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mailAgain" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--A felhasználó jelszava:-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--A felhasználó jelszava újra:-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userPasswordConfirm"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordAgain"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--Regisztrációs gomb:-->
    <Button
        android:id="@+id/sendRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register" />


</LinearLayout>
</ScrollView>