<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!--A felhasználó valódi neve:-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/realName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--A felhasználó felhasználóneve:-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/teal_700"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/username" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--A felhasználó email címe:-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userMail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/e_mail" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--A felhasználó aktuális jelszava:-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userPasswordActual"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/actualPassword"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--A felhasználó új jelszava:-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNewPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newPassword"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--A felhasználó új jelszava újra:-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNewPasswordConfirm"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newPasswordAgain"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--jelszó megváltoztatása:-->
            <Button
                android:id="@+id/modifyPWButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/modify" />
            <!--felhasználó törlése:-->
            <Button
                android:id="@+id/deleteUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#F30B0B"
                android:text="@string/deleteUser" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>