<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/editbox_dropdown_light_frame"
    tools:context=".shoppingListActivity">

    <Spinner
        android:id="@+id/unitSpinner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/quantityProduct"
        app:layout_constraintStart_toEndOf="@+id/quantityProduct"
        app:layout_constraintTop_toTopOf="@+id/quantityProduct" />


    <Button
        android:id="@+id/modifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="@string/modify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityProduct" />

    <AutoCompleteTextView
        android:id="@+id/modifyName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints=""
        android:hint="@string/productName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quantityProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/quantityP"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyName" />

</androidx.constraintlayout.widget.ConstraintLayout>