<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/Year"
            android:layout_weight="0.8"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/yearInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:inputType="number"
            android:minHeight="48dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:text="@string/month"
            android:layout_weight="0.8"
            android:layout_gravity="center_vertical"/>

        <Spinner
            android:id="@+id/monthSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"/>
    </LinearLayout>

    <Button
        android:id="@+id/evaluationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="@string/evaluation"/>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />
</LinearLayout>